<resources>
    <!-- Pantalla inicial -->
    <string name="app_name">Tendi</string>
    <string name="hi">¡Hola!</string>
    <string name="msjBienvenida">¡Te damos la bienvenida a Tendi!</string>
    <string name="cel">Tu número de celular</string>
    <string name="ejCel">Número de celular</string>
    <string name="password">Tu contraseña</string>
    <string name="ejContra">Contraseña</string>
    <string name="iniciar">Iniciar sesión</string>

    <!-- Pantalla registro -->
    <string name="title">¿Primera vez en tendi?</string>
    <string name="textRegistro">¿Eres un tendero o eres un comprador?\n
        <b>¡Selecciona una opción!</b></string>
    <string name="tender">Soy un tendero</string>
    <string name="user">Soy un comprador</string>

    <!-- Pantalla datosTendero -->
    <string name="instru">¡Indícanos quién eres!</string>
    <string name="name">Tu nombre completo</string>
    <string name="ejname">Nombre completo</string>
    <string name="lastname">Tu contraseña</string>
    <string name="ejlastname">Contraseña</string>
    <string name="confirmcontra">Confirma tu contraseña</string>
    <string name="confirmcontrahint">Confirma la contraseña</string>
    <string name="naci">Tu fecha de nacimiento</string>
    <string name="ejnaci">Ej: DD/MM/AA</string>
    <string name="identi">Tu identificación</string>
    <string name="ejidenti">Ej: 1.005.890.654</string>
    <string name="cont">Continuar</string>

    <!-- Pantalla datosTienda -->
    <string name="instruT">¡Ahora la información de tu tienda!</string>
    <string name="nameT">Nombre de la tienda</string>
    <string name="ejnameT">Nombre de la tienda</string>
    <string name="direction">Dirección de la tienda</string>
    <string name="ejdirect">Dirección de la tienda</string>
    <string name="rut">R.U.T</string>

    <string name="finalizar">¡Crea una cuenta!</string>


    <!-- Pantalla home -->
    <string name="ped">Pedidos</string>
    <string name="vent">Ventas</string>
    <string name="fin">Finanzas</string>
    <string name="bene">Beneficios</string>
    <string name="titleVentas">Ventas durante el mes</string>
    <string name="ultsem">(última semana)</string>

    <string name="hoy">Ventas hoy</string>
    <string name="sem">Ventas esta semana</string>

    <string name="notif">Notificaciones</string>
    <string name="home">Inicio</string>
    <string name="asis">Asistente</string>
    <string name="invent">Inventario</string>
    <string name="perf">Perfil</string>


    <!-- Instrucciones -->
    <string name="bienvenida">Nuevos</string>



    <!-- Pantalla pedidos -->
    <string name="nuevo">Nuevos</string>
    <string name="progres">En progreso</string>
    <string name="soli">Solicitó un pedido. </string>

    <!-- Pantalla infopedidos -->
    <string name="detalle">Detalles del pedido</string>
    <string name="pedi">Pedido de</string>
    <string name="confirm">Confirmar pedido</string>
    <string name="decline">Rechazar pedido</string>
    <string name="pediListo">¡Pedido listo!</string>
    <string name="total">Total a pagar:</string>

    <string name="entendido">¡Entendido!</string>

    <!-- Pantalla infopedidos confirmado-->
    <string name="confirmado">Pedido confirmado</string>
    <string name="mensjconfirm">Haz confirmado el pedido de</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finanzasTittle">Estadísticas de ganancias</string>
    <string name="mensuales">Mensuales</string>
    <string name="semanales">Semanales</string>
    <string name="infoProductos">Info. Productos</string>
    <string name="metas">Metas</string>
    <string name="addMeta">Agregar meta</string>

    <string name="addProductos">Agregar productos</string>


</resources>